робе рефакторінг коду у сасс

--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
             <li class="worker__item">
               <img src="./img/mihaylo.jpg" alt="Photo of worker" width="270" class="worker__img" />
               <div class="worker__wrap">
-                <h3 class="worker-name">Ігор Дем'яненко</h3>
-                <p class="worker-position">UI Designer</p>
+                <h3 class="worker__name">Ігор Дем'яненко</h3>
+                <p class="worker__position">UI Designer</p>
                 <ul class="icon-list">
                   <li class="icon-list__item">
                     <a href="#" class="icon-list__link">
@@ -367,7 +367,7 @@
     <footer class="contacts">
       <div class="container d-flex">
         <div class="footer-contacts">
-          <a href="/goit-markup-hw-01/index.html" class="logo">
+          <a href="/goit-markup-hw-01/index.html" class="logo contacts__logo">
             Web<span class="logo__light">Studio</span>
           </a>
           <address class="adress">
@@ -392,53 +392,53 @@
             </ul>
           </address>
         </div>
-        <div class="wrapper-social">
-          <p class="social-title">приєднуйтесь</p>
-          <ul class="worker-icon">
-            <li class="icon-item">
-              <a href="#" class="link-footer">
-                <svg class="footer-icon" width="20px" height="20px">
+        <div class="social">
+          <p class="social__title">приєднуйтесь</p>
+          <ul class="social__list">
+            <li class="social__item">
+              <a href="#" class="social__link">
+                <svg class="social__icon" width="20px" height="20px">
                   <use href="./img/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-item">
-              <a href="#" class="link-footer">
-                <svg class="footer-icon" width="20px" height="20px">
+            <li class="social__item">
+              <a href="#" class="social__link">
+                <svg class="social__icon" width="20px" height="20px">
                   <use href="./img/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-item">
-              <a href="#" class="link-footer">
-                <svg class="footer-icon" width="20px" height="20px">
+            <li class="social__item">
+              <a href="#" class="social__link">
+                <svg class="social__icon" width="20px" height="20px">
                   <use href="./img/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-item">
-              <a href="#" class="link-footer">
-                <svg class="footer-icon" width="20px" height="20px">
+            <li class="social__item">
+              <a href="#" class="social__link">
+                <svg class="social__icon" width="20px" height="20px">
                   <use href="./img/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <div class="wraper-form">
-          <p class="form-title">
+        <div class="footer-form">
+          <p class="footer-form__title">
             Підпишіться на розсилку
           </p>
-          <form class="form-footer" name="form-footer">
-            <label class="form-label">
-              <input type="email" class="form-label-input" name="E-mail" placeholder=" ">
-              <span class="form-label-email">
+          <form class="form" name="form-footer">
+            <label class="form__label">
+              <input type="email" class="form__input" name="E-mail" placeholder=" ">
+              <span class="form__label-email">
                 E-mail
               </span>
             </label>
-            <button type="submit" class="footer-btn">
+            <button type="submit" class="form__btn">
               Підписатися
-              <svg class="btn-icon" width="24" height="24">
+              <svg class="form__btn-icon" width="24" height="24">
                 <use href="./img/sprite.svg#icon-send"></use>
               </svg>
             </button>
