--- a/portfolio.html
+++ b/portfolio.html
@@ -15,33 +15,45 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header-page">
+   <header class="header">
       <div class="container flex-wraper">
-        <nav class="header-nav">
-          <a href="./index.html" class="logo"> <span class="logo-part">Web</span>Studio </a>
-          <ul class="header-list flex-wraper">
-            <li class="header-item"><a href="./index.html" class="nav-link">Студія</a></li>
-            <li class="header-item">
-              <a href="./portfolio.html" class="nav-link curent">Портфоліо</a>
+        <nav class="navigation">
+          <a href="./index.html" class="header__logo logo"> 
+            Web<span class="logo__dark">Studio</span> 
+          </a>
+          <ul class="menu-list flex-wraper">
+            <li class="menu-list__item curent">
+              <a href="./index.html" class="menu-list__link">
+                Студія
+              </a>
             </li>
-            <li class="header-item"><a href="#" class="nav-link">Контакти</a></li>
+            <li class="menu-list__item">
+              <a href="./portfolio.html" class="menu-list__link curent">
+                Портфоліо
+              </a>
+            </li>
+            <li class="header-item">
+              <a href="#" class="menu-list__link">
+                Контакти
+              </a>
+            </li>
           </ul>
         </nav>
-        <ul class="header-list">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="nav-contact">
-              <svg class="icon" width="16px" height="12px">
+        <ul class="contacts-list">
+          <li class="contacts-list__item">
+            <a href="mailto:info@devstudio.com" class="contacts-list__link">
+              <svg class="contacts-list__icon" width="16px" height="12px">
                 <use href="./img/sprite.svg#icon-msg"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="item">
-            <a href="tel:+380961111111" class="nav-contact">
-              <svg class="icon" width="10px" height="16px">
+          <li class="contacts-list__item">
+            <a href="tel:+380961111111" class="contacts-list__link">
+              <svg class="contacts-list__icon" width="10px" height="16px">
                 <use href="./img/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -257,79 +269,79 @@
     </main>
     <footer class="contacts">
       <div class="container d-flex">
-        <div class="wrapper-contacts">
-          <a href="/goit-markup-hw-01/index.html" class="logo">
-            <span class="logo-part">Web</span>Studio
+        <div class="footer-contacts">
+          <a href="/goit-markup-hw-01/index.html" class="logo contacts__logo">
+            Web<span class="logo__light">Studio</span>
           </a>
-          <address class="contacts-adress">
-            <ul class="contacts-list">
-              <li class="contacts-item">
+          <address class="adress">
+            <ul class="adress__list">
+              <li class="adress__item">
                 <a
                   href="http://surl.li/dadrl"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="footer-link"
+                  class="adress__link"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="contacts-item">
-                <a href="mailto:info@devstudio.com" class="footer-link opacity"
+              <li class="adress__item">
+                <a href="mailto:info@devstudio.com" class="adress__link adress__link--opacity"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="contacts-item">
-                <a href="tel:+380961111111" class="footer-link opacity">+38 096 111 11 11</a>
+              <li class="adress__item">
+                <a href="tel:+380961111111" class="adress__link adress__link--opacity">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
         </div>
-        <div class="wrapper-social">
-          <h3 class="social-title">приєднуйтесь</h3>
-          <ul class="worker-icon">
-            <li class="icon-item">
-              <a href="#" class="link-footer">
-                <svg class="footer-icon" width="20px" height="20px">
+        <div class="social">
+          <p class="social__title">приєднуйтесь</p>
+          <ul class="social__list">
+            <li class="social__item">
+              <a href="#" class="social__link">
+                <svg class="social__icon" width="20px" height="20px">
                   <use href="./img/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-item">
-              <a href="#" class="link-footer">
-                <svg class="footer-icon" width="20px" height="20px">
+            <li class="social__item">
+              <a href="#" class="social__link">
+                <svg class="social__icon" width="20px" height="20px">
                   <use href="./img/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-item">
-              <a href="#" class="link-footer">
-                <svg class="footer-icon" width="20px" height="20px">
+            <li class="social__item">
+              <a href="#" class="social__link">
+                <svg class="social__icon" width="20px" height="20px">
                   <use href="./img/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="icon-item">
-              <a href="#" class="link-footer">
-                <svg class="footer-icon" width="20px" height="20px">
+            <li class="social__item">
+              <a href="#" class="social__link">
+                <svg class="social__icon" width="20px" height="20px">
                   <use href="./img/sprite.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <div class="wraper-form">
-          <p class="form-title">
+        <div class="footer-form">
+          <p class="footer-form__title">
             Підпишіться на розсилку
           </p>
-          <form class="form-footer" name="form-footer">
-            <label class="form-label">
-              <input type="email" class="form-label-input" name="E-mail" placeholder=" ">
-              <span class="form-label-email">
+          <form class="form" name="form-footer">
+            <label class="form__label">
+              <input type="email" class="form__input" name="E-mail" placeholder=" ">
+              <span class="form__label-email">
                 E-mail
               </span>
             </label>
-            <button type="submit" class="footer-btn">
+            <button type="submit" class="form__btn">
               Підписатися
-              <svg class="btn-icon" width="24" height="24">
+              <svg class="form__btn-icon" width="24" height="24">
                 <use href="./img/sprite.svg#icon-send"></use>
               </svg>
             </button>
